# tdiff

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/tdiff/: app.py  app.tcss  cli.py  git.py  utils.py
tests/: conftest.py  test_git.py
