[build-system]
requires = ["uv_build>=0.11.6,<1.0.0"]
build-backend = "uv_build"

[project]
name = "tdiff"
version = "0.1.1"
description = "Textual diff application"
license = { text = "AGPL-3.0-or-later" }
homepage = "https://github.com/davidbrochart/tdiff"
repository = "https://github.com/davidbrochart/tdiff"
documentation = "https://github.com/davidbrochart/tdiff"

readme = "README.md"
authors = [
  { name = "David Brochart", email = "david.brochart@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
  "anyio >=4.13.0,<5",
  "cyclopts >=4.10.2,<5",
  "dulwich >=1.1.0,<2",
  "textual-diff-view >=0.1.3,<1",
]

[dependency-groups]
dev = [
  "pytest >=9.0.3,<10",
]

[project.scripts]
tdiff = "tdiff.cli:app"
