[build-system]
requires = ["uv_build>=0.11.6,<1.0.0"]
build-backend = "uv_build"

[project]
name = "tdiff"
version = "0.4.1"
description = "Textual diff application"
license = { file = "LICENSE" }
homepage = "https://github.com/davidbrochart/tdiff"
repository = "https://github.com/davidbrochart/tdiff"
documentation = "https://github.com/davidbrochart/tdiff"

readme = "README.md"
authors = [
  { name = "David Brochart", email = "david.brochart@gmail.com" }
]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
  "anyio >=4.13.0,<5",
  "cyclopts >=4.10.2,<5",
  "textual-diff-view >=0.1.5,<1",
  "watchfiles >=1.1.1,<2.0.0",
]

[dependency-groups]
dev = [
  "coverage",
  "pytest >=9.0.3,<10",
  "ruff",
  "ty",
]

[project.scripts]
tdiff = "tdiff.cli:app"
